[package]
name = "poe-superfilter"
description = "Extended syntax compiler for Path of Exile loot filters"
version = "0.1.0"
authors = ["Stefan Kaufhold <cere@fastmail.fm>"]
license = "MIT"
build = "build.rs" # LALRPOP preprocessing
exclude = [
    "examples/*",
    "doc/*"
]

[dependencies]
lalrpop-util = "^0.12"
regex = "^0.2"
lazy_static = "^0.2"
quick-error= "^1.1"
docopt = "^0.7"
rustc-serialize = "^0.3"
typed-arena = "1.2"
poe-superfilter-support = "0.1.0"

[build-dependencies]
lalrpop = "^0.12"

[lib]
name = "superfilter"
path = "src/lib.rs"

[[bin]]
name = "superfilter"
path = "src/cli.rs"
