[package]
name = "poe-superfilter"
description = "Extended syntax compiler for Path of Exile loot filters"
version = "0.2.0"
edition = "2021"
authors = ["Stefan Kaufhold <cere@fastmail.fm>"]
license = "MIT"
build = "build.rs" # LALRPOP preprocessing
repository = "https://github.com/skaufhold/poe-superfilter"
exclude = [
    "examples/*",
    "doc/*"
]

[dependencies]
lalrpop-util = "0.22"
regex = "1"
clap = "4.5"
miette = { version = "7", features = ["fancy"] }
poe-superfilter-support = { path = "support", version = "0.2.0" }
error-chain = "0.12"

[build-dependencies]
lalrpop = "0.22"

[lib]
name = "superfilter"
path = "src/lib.rs"

[[bin]]
name = "superfilter"
path = "src/cli.rs"
