[package]
name = "poe-superfilter-support"
version = "0.1.2"
description = "Support crate with procedural macros for poe-superfilter"
authors = ["Stefan Kaufhold <cere@fastmail.fm>"]
license = "MIT"
repository = "https://github.com/skaufhold/poe-superfilter"

[dependencies]
syn = "0.11"
quote = "0.3"

[lib]
name = "superfilter_macro"
path = "src/lib.rs"
proc-macro = true
