[package]
name = "poe-superfilter-support"
version = "0.2.0"
description = "Support crate with procedural macros for poe-superfilter"
authors = ["Stefan Kaufhold <cere@fastmail.fm>"]
license = "MIT"
repository = "https://github.com/skaufhold/poe-superfilter"

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"

[lib]
name = "superfilter_macro"
path = "src/lib.rs"
proc-macro = true
